e3mall_day04 完成商品添加功能,编辑功能

--- a/e3-manager-web/pom.xml
+++ b/e3-manager-web/pom.xml
@@ -81,7 +81,11 @@
 			<groupId>com.github.sgroschupf</groupId>
 			<artifactId>zkclient</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+  </dependencies>
 	<build>
 		<plugins>
 			<!-- 配置Tomcat插件 -->
