--- a/e3-common/pom.xml
+++ b/e3-common/pom.xml
@@ -54,5 +54,16 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
-	</dependencies>
+		
+		<dependency>
+			<groupId>fastdfs_client</groupId>
+ 			<artifactId>fastdfs_client</artifactId>
+  			<version>1.25</version>
+		</dependency>
+		<!-- 文件上传 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
+  </dependencies>
 </project>
