--- a/e3-parent/e3-portal-web/pom.xml
+++ b/e3-parent/e3-portal-web/pom.xml
@@ -8,11 +8,11 @@
   <artifactId>e3-portal-web</artifactId>
   <packaging>war</packaging>
   <dependencies>
-  		<!-- <dependency>
+  		<dependency>
 			<groupId>cn.e3mall</groupId>
-			<artifactId>e3-manager-interface</artifactId>
+			<artifactId>e3-content-interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>  -->
+		</dependency>
 		<!-- spring的依赖 -->
 		<!-- Spring -->
 		<dependency>
