--- a/e3-item-web/pom.xml
+++ b/e3-item-web/pom.xml
@@ -88,6 +88,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.freemarker</groupId>
+		  <artifactId>freemarker</artifactId>
+		</dependency>
+		<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-all</artifactId>
+		</dependency>
   </dependencies>
 	<build>
 		<plugins>
