--- a/e3-sso/pom.xml
+++ b/e3-sso/pom.xml
@@ -9,6 +9,26 @@
   <artifactId>e3-sso</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+   <dependencies>
+		<dependency>
+			<groupId>cn.e3mall</groupId>
+			<artifactId>e3-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<!-- 配置tomcat插件 -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<configuration>
+					<port>8087</port>
+					<path>/</path>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
   <modules>
   	<module>e3-sso-interface</module>
   	<module>e3-sso-service</module>
